# BitstreamEvolution

./: .gitignore  404.html  Dockerfile  Makefile  PiSetup.md  README.md  config.py  conftest.py  evolvatron.md  genindex.html  index.html  interpret_pyproject.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  start
.github/workflows/: initialize-push-workflows.yml  read-toml.yml
_modules/: CircuitPopulation.html  Config.html  ConfigValue.html  Microcontroller.html  arg_parse_utils.html  evolve.html  index.html  multi_evolve.html
_sources/: 404.rst.txt
_sources/code/: ConfigValue.rst.txt  Evolution.rst.txt  Logger.rst.txt  Monitor.rst.txt  arg_parse_utils.rst.txt  config_builder.rst.txt  evolve.rst.txt  index.rst.txt  init.rst.txt  multi_evolve.rst.txt
_sources/code/tools/: reconstruct.rst.txt
code/: Circuit.html  CircuitPopulation.html  Config.html  ConfigBuilder.html  ConfigValue.html  Evolution.html  Logger.html  Microcontroller.html  Monitor.html  PlotEvolutionLive.html  arg_parse_utils.html  ascTemplateBuilder.html  config_builder.html  evolve.html  index.html  init.html  multi_evolve.html  utilities.html
code/tools/: pulse_histogram.html  reconstruct.html
data/: config.ini  default_config.ini  example_experiment.ini  monitor  seed-hardware-gaull.asc  seed-hardware.asc  test.asc  test_c.ini
data/ReadEnvironment/: ReadEnvironment.ino
data/ReadSignal/: ReadSignal.ino  ReadSignalPulseCount.ino  ReadSignalPulseWidth.ino
data/example_configs/: 40k_oscillator.ini  50k_oscillator.ini  ToneDiscriminator.ini  ToneDiscriminatorSensitivity.ini  fitness_sensitivity.ini  fitness_sensitivity_enviroment.ini  sim.ini  variance_maximization.ini
data/oscillate/: oscillate.ino
dev/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: 404.doctree  environment.pickle  index.doctree
dev/.doctrees/code/: BitstreamEvolutionProtocols.doctree  index.doctree
dev/.doctrees/dev/: index.doctree
dev/.doctrees/interface/: index.doctree
dev/.doctrees/old_code/: Circuit.doctree  CircuitPopulation.doctree  Config.doctree  ConfigBuilder.doctree  ConfigValue.doctree  Evolution.doctree  (+12 more)
dev/_modules/: CircuitPopulation.html  Config.html  ConfigValue.html  Microcontroller.html  arg_parse_utils.html  evolve.html  index.html  multi_evolve.html
dev/_sources/: index.rst
dev/code/: BitstreamEvolutionProtocols.html  index.html
dev/dev/: index.html
dev/interface/: index.html
dev/old_code/: Circuit.html  CircuitPopulation.html  Config.html  ConfigBuilder.html  ConfigValue.html  Evolution.html  Logger.html  Microcontroller.html  Monitor.html  PlotEvolutionLive.html  arg_parse_utils.html  ascTemplateBuilder.html  config_builder.html  evolve.html  index.html  init.html  multi_evolve.html  utilities.html
docs/: Makefile  generate-all-documentation.sh  generate-website.sh
docs/website/: note.txt
interface/mypy_test/: type_change_dynamically.py
src/: BitstreamEvolutionProtocols.py  Circuit.py  CircuitPopulation.py  Config.py  ConfigBuilder.py  ConfigValue.py  Directories.py  Evolution.py  Evolve.py  FirstAttemptCircuit.py  GenerateInitialPopulations.py  Logger.py  Microcontroller.py  Monitor.py  PlotConfig.py  PlotDataRecorder.py  PlotEvolutionLive.py  PlotSensitivityLive.py  PopulationInitialization.py  TrivialImplementation.py  WorkspaceFormatter.py  arg_parse_utils.py  ascTemplateBuilder.py  config_builder.py  evolve.py  init.py  multi_evolve.py  utilities.py  workspace_formatter.py
src/Circuit/: Circuit.py  CircuitLegacy.py  CircuitOld.py  FileBasedCircuit.py  FitnessFunction.py  FullySimCircuit.py  IntrinsicCircuit.py  PulseCountFitnessFunction.py  SimHardwareCircuit.py  ToneDiscriminatorFitnessFunction.py  VarMaxFitnessFunction.py
src/EvaluateFitness/: EvalPulseCountFitness.py  EvalVarMaxFitness.py  EvaluateFitness.py
src/GenerateMeasurements/: GenerateMeasurements.py  GenerateVarMaxMeasurements.py
src/Hardware/: Microcontroller.py
src/Individual/: BitstreamIndividual.py
src/Population/: PopulationInitialization.py
src/tools/: aggregate_pulse.py  config_gen.py  generate_configs.py  pulse_histogram.py  reconstruct.py
src_old/: CircuitPopulation.py  Config.py  Evolution.py  Microcontroller.py  Monitor.py  arg_parse_utils.py  ascTemplateBuilder.py  config_builder.py  evolve.py  init.py
src_old/Circuit/: CircuitLegacy.py  FileBasedCircuit.py  FitnessFunction.py  FullySimCircuit.py  ToneDiscriminatorFitnessFunction.py
test/: test_BitstreamEvolutionProtocols.py  test_BitstreamIndividual.py  test_FileCircuitFactory.py  test_FirstAttemptCircuit.py  test_FitnessEval.py  test_GenBitstreamPopulation.py  test_GenerateMeasurements.py  test_TrivialImplementation.py  test_config_builder.py  test_evolve.py  test_evolve_terminal_args.py  test_multi_evolve.py  test_population.py  test_utils.py
test/Circuit/: test_fully_sim_circuit.py  test_hardware_sim_circuit.py  test_intrinsic_circuit.py  test_pulse_count_func.py  test_var_max_func.py
test/Manual_Test/: trying_asyncio.py
(+91 files in other folders)
